--- a/color-sequence.html
+++ b/color-sequence.html
@@ -68,15 +68,15 @@
 					<form class="form-inline text-center">
 						<div class="row">
 							<div class="form-group form-group-lg">
-								<label for="exampleInputName2">Number of Colors </label>
-								<input type="number" class="form-control" id="number" placeholder="19" min="0" max="999" style="width: 85px">
+								<label for="number">Number of Colors </label>
+								<input type="number" class="form-control" id="number" placeholder="19" min="1" max="360" style="width: 85px">
 							</div>
 							<div class="form-group form-group-lg">
-								<label for="exampleInputEmail2">Saturation</label>
+								<label for="saturation">Saturation</label>
 								<input type="number" class="form-control" id="saturation" placeholder="0.5" min="0" max="1" step="0.01" style="width: 85px">
 							</div>
 							<div class="form-group form-group-lg">
-								<label for="exampleInputEmail2">Value</label>
+								<label for="value">Value</label>
 								<input type="number" class="form-control" id="value" placeholder="0.95" min="0" max="1" step="0.01" style="width: 85px">
 							</div>
 						</div>
