Fixed mobile problem.

--- a/color-sequence.html
+++ b/color-sequence.html
@@ -69,15 +69,15 @@
 						<div class="row">
 							<div class="form-group form-group-lg">
 								<label for="number">Number of Colors </label>
-								<input type="number" class="form-control" id="number" placeholder="19" min="1" max="360" style="width: 85px">
+								<input type="number" class="form-control center-block" id="number" placeholder="19" min="1" max="360" style="width: 85px">
 							</div>
 							<div class="form-group form-group-lg">
 								<label for="saturation">Saturation</label>
-								<input type="number" class="form-control" id="saturation" placeholder="0.5" min="0" max="1" step="0.01" style="width: 85px">
+								<input type="number" class="form-control center-block" id="saturation" placeholder="0.5" min="0" max="1" step="0.01" style="width: 85px">
 							</div>
 							<div class="form-group form-group-lg">
 								<label for="value">Value</label>
-								<input type="number" class="form-control" id="value" placeholder="0.95" min="0" max="1" step="0.01" style="width: 85px">
+								<input type="number" class="form-control center-block" id="value" placeholder="0.95" min="0" max="1" step="0.01" style="width: 85px">
 							</div>
 						</div>
 						<div class="row">
